src/objects/Time__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Duration__c * Assignment__r.Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assignment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( Start_DateTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time</relationshipLabel>
        <relationshipName>Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Time</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Assignment__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>End_DateTime__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Assignment__c</columns>
        <columns>Duration__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Start_DateTime__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Time Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>My_Time_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Assignment__c</columns>
        <columns>Duration__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Start_DateTime__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>My Time This Week</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Today</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Assignment__c</columns>
        <columns>Duration__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Start_DateTime__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Time Today</label>
    </listViews>
    <nameField>
        <displayFormat>Time-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>